bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__permissions_selection_history_full_access_to_default.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: "lines_to_single_string(&cells[0])"
---
• Permissions updated to Default
