bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__personality_selection_popup.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: popup
---
  Select Personality
  Choose a communication style for Chaos.

  1. Friendly             Warm, collaborative, and helpful.
› 2. Pragmatic (current)  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
