bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: rendered
---
• `/copy` is unavailable before the first Codex output or right after a rollback.
