bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__status_widget_active.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
