bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: combined
---
• Waited for background terminal · just fix

↳ Interacted with background terminal · just fix
  └ ls
